syntax = "proto3";

package sns;

import "google/protobuf/empty.proto";

option go_package = "github.com/minoritea/sns/rpc/proto";

service AuthenticationService {
  rpc SignUp(SignUpRequest) returns (google.protobuf.Empty);
  rpc IsSignedIn(google.protobuf.Empty) returns (google.protobuf.Empty);
}

message SignUpRequest {
    string name = 1;
    string email = 2;
    string password = 3;
}
